--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
     - assets/logo/case2.png
     - assets/logo/tablet.png
     - assets/logo/Polygon.png
+    - assets/logo/Illustration.png
+    - assets/logo/Rectangle2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -84,6 +86,9 @@ flutter:
     - family: Nunito
       fonts:
         - asset: assets/fonts/Nunito-700.ttf
+    - family: NunitoRegular
+      fonts:
+        - asset: assets/fonts/Nunito-regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
