--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,10 @@ flutter:
     - assets/logo/Polygon.png
     - assets/logo/Illustration.png
     - assets/logo/Rectangle2.png
+    - assets/images/splash.png
+    - assets/images/image.png
+    - assets/images/Vector1.png
+    - assets/images/Vector2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
